Add block header and main-slider

--- a/app/_header.html
+++ b/app/_header.html
@@ -1,14 +1,38 @@
 	<header class="header">
 			<div class="header__container container">
 
+				<a class="header__logo" href="#">
+					<img class="header__logo-link" src="img/header/logo.png" alt="">
+				</a>
+
 				<div class="menu__burger">
 					<span></span>
 				</div>
 				<nav class="menu">
 					<ul class="menu__list">           
-						<li class="menu__item"><a class="menu__link" href="">Home</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Shop</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Featured</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Contact us</a></li>
+						<li class="menu__item"><button class="menu__link menu__link-btn"><img src="img/icons/search.png" alt=""></button></li>
 					</ul>
 				</nav>
+
+				<div class="cart">
+					<div class="cart__setting">
+						<img src="img/icons/settings.png" alt="">
+						<span>Setting</span>
+					</div>
+					<div class="cart__wallet">
+						<img class="cart__wallet-icon" src="img/icons/wallet.png" alt="">
+						<div class="cart__wallet-price">
+							<span class="cart__wallet-sum">2</span> item(s) - <span class="cart__wallet-total">$100.00</span>
+						</div>
+					</div>
+				</div>
+
 			</div>
 	</header>
 
