--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,32 @@
 	<div class="wrapper">
 	@@include('_header.html')
 		<main class="page">
-
+			<div class="container">
+				<!-- main-slider -->
+				<div class="main-slider">
+					<div class="main-slider__item">
+						<div class="main-slider__image ibg">
+							<img src="img/01.jpg" alt="">
+						</div>
+						<div class="main-slider__content">
+							<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
+							<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
+							<a class="main-slider__content-btn btn" href="#">View more</a>
+						</div>
+					</div>
+					<div class="main-slider__item">
+						<div class="main-slider__image ibg">
+							<img src="img/01.jpg" alt="">
+						</div>
+						<div class="main-slider__content">
+							<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
+							<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
+							<a class="main-slider__content-btn btn" href="#">View more</a>
+						</div>
+					</div>
+				</div>
+				<!-- main-slider end -->
+			</div>
 		</main>
 		@@include('_footer.html')
 	</div>
