Add fonts, block information,featured,cart

--- a/app/index.html
+++ b/app/index.html
@@ -12,27 +12,166 @@
 				<!-- main-slider -->
 				<div class="main-slider">
 					<div class="main-slider__item">
-						<div class="main-slider__image ibg">
+						<div class="main-slider__image">
 							<img src="img/01.jpg" alt="">
-						</div>
-						<div class="main-slider__content">
-							<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-							<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-							<a class="main-slider__content-btn btn" href="#">View more</a>
+							<div class="main-slider__content">
+								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
+								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
+								<a class="main-slider__content-btn btn" href="#">View more</a>
+							</div>
 						</div>
 					</div>
 					<div class="main-slider__item">
-						<div class="main-slider__image ibg">
+						<div class="main-slider__image">
 							<img src="img/01.jpg" alt="">
+							<div class="main-slider__content">
+								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
+								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
+								<a class="main-slider__content-btn btn" href="#">View more</a>
+							</div>
 						</div>
-						<div class="main-slider__content">
-							<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-							<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-							<a class="main-slider__content-btn btn" href="#">View more</a>
+					</div>
+					<div class="main-slider__item">
+						<div class="main-slider__image">
+							<img src="img/01.jpg" alt="">
+							<div class="main-slider__content">
+								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
+								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
+								<a class="main-slider__content-btn btn" href="#">View more</a>
+							</div>
 						</div>
 					</div>
 				</div>
 				<!-- main-slider end -->
+				<!-- information -->
+				<div class="information">
+					<div class="information__row">
+						<div class="information__column">
+							<div class="information__item">
+								<img class="information__item-img" src="img/01.jpg" alt="">
+								<div class="information__item-content information__item-content--1">
+									<div class="information__item-title information__item-title--1">Insightfull eye care</div>
+									<div class="information__item-descr">Call today for a comprehensive vision test</div>
+									<a class="information__item-btn information__item-btn--1 btn" href="#">Request Appointment</a>
+								</div>
+							</div>
+						</div>
+						<div class="information__column information__column--bg">
+							<div class="information__item information__item--bg">
+								<img class="information__item-img" src="img/01.jpg" alt="">
+								<div class="information__item-content information__item-content--2">
+									<div class="information__item-title information__item-title--2">Lest’s create something <span>Awesome</span></div>
+									<a class="information__item-btn btn information__item-btn--2" href="#">SHOP NOW</a>
+								</div>
+							</div>
+						</div>
+						<div class="information__column">
+							<div class="information__item">
+								<img class="information__item-img" src="img/01.jpg" alt="">
+								<div class="information__item-content information__item-content--3">
+									<div class="information__item-title information__item-title--3">Impressa Z9</div>
+									<div class="information__item-descr information__item-descr--3">Sophistication and extravagance</div>
+								</div>
+							</div>
+						</div>
+						<div class="information__column">
+							<div class="information__item">
+								<img class="information__item-img" src="img/01.jpg" alt="">
+								<div class="information__item-content information__item-content--3">
+									<div class="information__item-title information__item-title--3">Impressa Z9</div>
+									<div class="information__item-descr information__item-descr--3">Sophistication and extravagance</div>
+								</div>
+							</div>
+						</div>
+						<div class="information__column">
+							<div class="information__item">
+								<img class="information__item-img" src="img/01.jpg" alt="">
+								<div class="information__item-content information__item-content--4">
+									<div class="information__item-title information__item-title--4">Canberra <span>Coffee</span></div>
+									<div class="information__item-price information__item-price--4">Just <span>$2.5</span></div>
+									<a class="information__item-btn btn information__item-btn--4" href="#">Try it now</a>
+								</div>
+							</div>
+						</div>
+						<div class="information__column">
+							<div class="information__item">
+								<img class="information__item-img" src="img/01.jpg" alt="">
+								<div class="information__item-bookmark">
+									<span>sale off</span>
+									<span>20%</span>
+								</div>
+								<div class="information__item-content information__item-content--5">
+									<div class="information__item-descr information__item-descr--5">Ship within 24Hrs</div>
+									<a class="information__item-btn btn information__item-btn--5" href="#">Buy now</a>
+								</div>
+							</div>
+						</div>
+						<div class="information__column">
+							<div class="information__item">
+								<img class="information__item-img" src="img/01.jpg" alt="">
+								<div class="information__item-content information__item-content--4">
+									<div class="information__item-title information__item-title--4">Canberra <span>Coffee</span></div>
+									<div class="information__item-price information__item-price--4">Just <span>$2.5</span></div>
+									<a class="information__item-btn btn information__item-btn--4" href="#">Try it now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- information end -->
+				<!-- featured -->
+				<div class="featured">
+					<div class="featured__main-title main-title">
+						<span>The latest featured products</span>
+						Featured products
+					</div>
+
+					<div class="featured__slider">
+						<div class="featured__slider-item">
+							<div class="featured__row">
+								<div class="featured__column">
+									<div class="featured__cart cart">
+										<div class="cart__overlay">
+											new
+										</div>
+										<div class="cart__img">
+											<img src="img/01.jpg" alt="">
+										</div>
+										<div class="cart__body">
+											<div class="cart__body-header">
+												<ul class="cart__body-star">
+													<li><i class="icon-star"></i></li>
+													<li><i class="icon-star"></i></li>
+													<li><i class="icon-star"></i></li>
+													<li><i class="icon-star"></i></li>
+													<li><i class="icon-star"></i></li>
+												</ul>
+												<ul class="cart__body-color">
+													<li></li>
+													<li></li>
+												</ul>
+											</div>
+											<div class="cart__body-descr">
+												Cuisinart DCC 3000 Coffee on 
+												Demand 12-C | 
+												<span>$15.00</span>
+											</div>
+											<div class="cart__body-footer">
+												<a class="cart__body-btn btn" href="#">Add to cart</a>
+												<div class="cart__body-actions">
+													<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+													<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<!-- featured -->
 			</div>
 		</main>
 		@@include('_footer.html')
