Add block cart with adaptive

--- a/app/_header.html
+++ b/app/_header.html
@@ -20,15 +20,15 @@
 					</ul>
 				</nav>
 
-				<div class="cart">
-					<div class="cart__setting">
+				<div class="basket">
+					<div class="basket__setting">
 						<img src="img/icons/settings.png" alt="">
 						<span>Setting</span>
 					</div>
-					<div class="cart__wallet">
-						<img class="cart__wallet-icon" src="img/icons/wallet.png" alt="">
-						<div class="cart__wallet-price">
-							<span class="cart__wallet-sum">2</span> item(s) - <span class="cart__wallet-total">$100.00</span>
+					<div class="basket__wallet">
+						<img class="basket__wallet-icon" src="img/icons/wallet.png" alt="">
+						<div class="basket__wallet-price">
+							<span class="basket__wallet-sum">2</span> item(s) - <span class="cart__wallet-total">$100.00</span>
 						</div>
 					</div>
 				</div>
