--- a/app/index.html
+++ b/app/index.html
@@ -128,46 +128,262 @@
 
 					<div class="featured__slider">
 						<div class="featured__slider-item">
-							<div class="featured__row">
-								<div class="featured__column">
-									<div class="featured__cart cart">
-										<div class="cart__overlay">
-											new
-										</div>
-										<div class="cart__img">
-											<img src="img/01.jpg" alt="">
-										</div>
-										<div class="cart__body">
-											<div class="cart__body-header">
-												<ul class="cart__body-star">
-													<li><i class="icon-star"></i></li>
-													<li><i class="icon-star"></i></li>
-													<li><i class="icon-star"></i></li>
-													<li><i class="icon-star"></i></li>
-													<li><i class="icon-star"></i></li>
-												</ul>
-												<ul class="cart__body-color">
-													<li></li>
-													<li></li>
-												</ul>
-											</div>
-											<div class="cart__body-descr">
-												Cuisinart DCC 3000 Coffee on 
-												Demand 12-C | 
-												<span>$15.00</span>
-											</div>
-											<div class="cart__body-footer">
-												<a class="cart__body-btn btn" href="#">Add to cart</a>
-												<div class="cart__body-actions">
-													<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-													<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
-												</div>
-											</div>
+							<div class="featured__cart cart">
+								<div class="cart__overlay">
+									new
+								</div>
+								<div class="cart__img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="cart__body">
+									<div class="cart__body-header">
+										<ul class="cart__body-star">
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+										</ul>
+										<ul class="cart__body-color">
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+									<div class="cart__body-descr">
+										Cuisinart DCC 3000 Coffee on 
+										Demand 12-C | 
+										<div class="cart__body-price">$15.00</div>
+									</div>
+									<div class="cart__body-footer">
+										<a class="cart__body-btn btn" href="#">Add to cart</a>
+										<div class="cart__body-actions">
+											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+											<div class="cart__body-like active"><i class="icon-heart-empty"></i></div>
 										</div>
 									</div>
 								</div>
 							</div>
-
+						</div>
+						<div class="featured__slider-item">
+							<div class="featured__cart cart">
+								<div class="cart__overlay">
+									new
+								</div>
+								<div class="cart__img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="cart__body">
+									<div class="cart__body-header">
+										<ul class="cart__body-star">
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+										</ul>
+										<ul class="cart__body-color">
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+									<div class="cart__body-descr">
+										Cuisinart DCC 3000 Coffee on 
+										Demand 12-C | 
+										<span>$15.00</span>
+									</div>
+									<div class="cart__body-footer">
+										<a class="cart__body-btn btn" href="#">Add to cart</a>
+										<div class="cart__body-actions">
+											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="featured__slider-item">
+							<div class="featured__cart cart">
+								<div class="cart__overlay">
+									new
+								</div>
+								<div class="cart__img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="cart__body">
+									<div class="cart__body-header">
+										<ul class="cart__body-star">
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+										</ul>
+										<ul class="cart__body-color">
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+									<div class="cart__body-descr">
+										Cuisinart DCC 3000 Coffee on 
+										Demand 12-C | 
+										<span>$15.00</span>
+									</div>
+									<div class="cart__body-footer">
+										<a class="cart__body-btn btn" href="#">Add to cart</a>
+										<div class="cart__body-actions">
+											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="featured__slider-item">
+							<div class="featured__cart cart">
+								<div class="cart__overlay">
+									new
+								</div>
+								<div class="cart__img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="cart__body">
+									<div class="cart__body-header">
+										<ul class="cart__body-star">
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+										</ul>
+										<ul class="cart__body-color">
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+									<div class="cart__body-descr">
+										Gucci GG1008 Eyeglasses GG1008 Eyeglasses | 
+										<div class="cart__body-price sale">$15.00 <span class="sale">$25.00</span></div>
+									</div>
+									<div class="cart__body-footer">
+										<a class="cart__body-btn btn" href="#">Add to cart</a>
+										<div class="cart__body-actions">
+											<div class="cart__body-shuffle active"><i class="icon-shuffle"></i></div>
+											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="featured__slider-item">
+							<div class="featured__cart cart">
+								<div class="cart__overlay">
+									new
+								</div>
+								<div class="cart__img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="cart__body">
+									<div class="cart__body-header">
+										<ul class="cart__body-star">
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+										</ul>
+										<ul class="cart__body-color">
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+									<div class="cart__body-descr">
+										Cuisinart DCC 3000 Coffee on 
+										Demand 12-C | 
+										<span>$15.00</span>
+									</div>
+									<div class="cart__body-footer">
+										<a class="cart__body-btn btn" href="#">Add to cart</a>
+										<div class="cart__body-actions">
+											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="featured__slider-item">
+							<div class="featured__cart cart">
+								<div class="cart__overlay">
+									new
+								</div>
+								<div class="cart__img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="cart__body">
+									<div class="cart__body-header">
+										<ul class="cart__body-star">
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+										</ul>
+										<ul class="cart__body-color">
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+									<div class="cart__body-descr">
+										Cuisinart DCC 3000 Coffee on 
+										Demand 12-C | 
+										<span>$15.00</span>
+									</div>
+									<div class="cart__body-footer">
+										<a class="cart__body-btn btn" href="#">Add to cart</a>
+										<div class="cart__body-actions">
+											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="featured__slider-item">
+							<div class="featured__cart cart">
+								<div class="cart__overlay">
+									new
+								</div>
+								<div class="cart__img">
+									<img src="img/01.jpg" alt="">
+								</div>
+								<div class="cart__body">
+									<div class="cart__body-header">
+										<ul class="cart__body-star">
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+											<li><i class="icon-star"></i></li>
+										</ul>
+										<ul class="cart__body-color">
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+									<div class="cart__body-descr">
+										Cuisinart DCC 3000 Coffee on 
+										Demand 12-C | 
+										<span>$15.00</span>
+									</div>
+									<div class="cart__body-footer">
+										<a class="cart__body-btn btn" href="#">Add to cart</a>
+										<div class="cart__body-actions">
+											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+											<div class="cart__body-like"><i class="icon-heart-empty"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
