Add block policy with adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -387,7 +387,61 @@
 						</div>
 					</div>
 				</div>
-				<!-- featured -->
+				<!-- featured end -->
+				<!-- policy -->
+				<div class="policy">
+					<div class="policy__row">
+						<div class="policy__column">
+							<div class="policy__item">
+								<div class="policy__item-image policy__item-image--yellow">
+									<img src="img/icons/checked_truck.png" alt="">
+								</div>
+								<div class="policy__item-body">
+									<div class="policy__item-title">Freeshipping on order over $100 </div>
+									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+									<a class="policy__item-btn btn" href="#">READ MORE</a>
+								</div>
+							</div>
+						</div>
+						<div class="policy__column">	
+							<div class="policy__item">
+								<div class="policy__item-image policy__item-image--blue">
+									<img src="img/icons/sale.png" alt="">
+								</div>
+								<div class="policy__item-body">
+									<div class="policy__item-title">10% off the bill</div>
+									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+									<a class="policy__item-btn btn" href="#">READ MORE</a>
+								</div>
+							</div>
+						</div>
+						<div class="policy__column">
+							<div class="policy__item">
+								<div class="policy__item-image policy__item-image--green">
+									<img src="img/icons/knight_shield.png" alt="">
+								</div>
+								<div class="policy__item-body">
+									<div class="policy__item-title">Security payment</div>
+									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+									<a class="policy__item-btn btn" href="#">READ MORE</a>
+								</div>
+							</div>
+						</div>
+						<div class="policy__column">
+							<div class="policy__item">
+								<div class="policy__item-image policy__item-image--violet">
+									<img src="img/icons/headset.png" alt="">
+								</div>
+								<div class="policy__item-body">
+									<div class="policy__item-title">live Support</div>
+									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+									<a class="policy__item-btn btn" href="#">READ MORE</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- policy end -->
 			</div>
 		</main>
 		@@include('_footer.html')
