Add blocks banner, news,special-product, newsletter

--- a/app/index.html
+++ b/app/index.html
@@ -48,72 +48,72 @@
 					<div class="information__row">
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/01.jpg" alt="">
-								<div class="information__item-content information__item-content--1">
+								<img class="information__item-img" src="img/information/01.jpg" alt="">
+<!-- 								<div class="information__item-content information__item-content--1">
 									<div class="information__item-title information__item-title--1">Insightfull eye care</div>
 									<div class="information__item-descr">Call today for a comprehensive vision test</div>
 									<a class="information__item-btn information__item-btn--1 btn" href="#">Request Appointment</a>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="information__column information__column--bg">
 							<div class="information__item information__item--bg">
-								<img class="information__item-img" src="img/01.jpg" alt="">
-								<div class="information__item-content information__item-content--2">
+								<img class="information__item-img" src="img/information/03.jpg" alt="">
+<!-- 								<div class="information__item-content information__item-content--2">
 									<div class="information__item-title information__item-title--2">Lest’s create something <span>Awesome</span></div>
 									<a class="information__item-btn btn information__item-btn--2" href="#">SHOP NOW</a>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/01.jpg" alt="">
-								<div class="information__item-content information__item-content--3">
+								<img class="information__item-img" src="img/information/04.jpg" alt="">
+<!-- 								<div class="information__item-content information__item-content--3">
 									<div class="information__item-title information__item-title--3">Impressa Z9</div>
 									<div class="information__item-descr information__item-descr--3">Sophistication and extravagance</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/01.jpg" alt="">
-								<div class="information__item-content information__item-content--3">
+								<img class="information__item-img" src="img/information/05.jpg" alt="">
+<!-- 								<div class="information__item-content information__item-content--3">
 									<div class="information__item-title information__item-title--3">Impressa Z9</div>
 									<div class="information__item-descr information__item-descr--3">Sophistication and extravagance</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/01.jpg" alt="">
-								<div class="information__item-content information__item-content--4">
+								<img class="information__item-img" src="img/information/06.jpg" alt="">
+<!-- 								<div class="information__item-content information__item-content--4">
 									<div class="information__item-title information__item-title--4">Canberra <span>Coffee</span></div>
 									<div class="information__item-price information__item-price--4">Just <span>$2.5</span></div>
 									<a class="information__item-btn btn information__item-btn--4" href="#">Try it now</a>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/01.jpg" alt="">
-								<div class="information__item-bookmark">
+								<img class="information__item-img" src="img/information/04.jpg" alt="">
+<!-- 								<div class="information__item-bookmark">
 									<span>sale off</span>
 									<span>20%</span>
 								</div>
 								<div class="information__item-content information__item-content--5">
 									<div class="information__item-descr information__item-descr--5">Ship within 24Hrs</div>
 									<a class="information__item-btn btn information__item-btn--5" href="#">Buy now</a>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/01.jpg" alt="">
-								<div class="information__item-content information__item-content--4">
+								<img class="information__item-img" src="img/information/01.jpg" alt="">
+<!-- 								<div class="information__item-content information__item-content--4">
 									<div class="information__item-title information__item-title--4">Canberra <span>Coffee</span></div>
 									<div class="information__item-price information__item-price--4">Just <span>$2.5</span></div>
 									<a class="information__item-btn btn information__item-btn--4" href="#">Try it now</a>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -133,7 +133,9 @@
 									new
 								</div>
 								<div class="cart__img">
-									<img src="img/01.jpg" alt="">
+									<a href="#">
+										<img src="img/01.jpg" alt="">
+									</a>
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
@@ -149,11 +151,11 @@
 											<li></li>
 										</ul>
 									</div>
-									<div class="cart__body-descr">
+									<a class="cart__body-title" href="#">
 										Cuisinart DCC 3000 Coffee on 
 										Demand 12-C | 
-										<div class="cart__body-price">$15.00</div>
-									</div>
+										<span class="cart__body-price">$15.00</span>
+									</a>
 									<div class="cart__body-footer">
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
 										<div class="cart__body-actions">
@@ -442,6 +444,211 @@
 					</div>
 				</div>
 				<!-- policy end -->
+				<!-- special-product -->
+				<div class="special-product">
+					<div class="special-product__bg ibg">
+						<img src="img/special-product/bg.png" alt="">
+					</div>
+					<div class="special-product__row">
+						<div class="special-product__column special-product__column--bg">
+							<div class="special-product__text">
+								<div class="special-product__text-title">Keurig® K15 Classic Series</div>
+								<div class="special-product__text-descr">
+									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+									<span>Key features</span>
+									<ul>
+										<li>No Water Reservoir</li>
+										<li>Button Controls</li>
+										<li>Brews 6, 8, 10oz. with K-Cup® pods</li>
+									</ul>
+								</div>
+								<div class="special-product__text-price">
+									Price Just 
+									<span>$99.99</span>
+								</div>
+								<a class="special-product__btn btn" href="#">Buy now</a>
+							</div>
+						</div>
+						<div class="special-product__column">
+							<div class="special-product__image"></div>
+							<div class="special-product__colors">
+								<span class="special-product__colors-color red active" data-color="#D31D2C" data-pic="url(img/special-product/red.jpg)"></span>
+								<span class="special-product__colors-color blue-darker" data-color="#355885" data-pic="url(img/special-product/blue-darker.jpg)"></span>
+								<span class="special-product__colors-color dark" data-color="#363636" data-pic="url(img/special-product/dark.jpg)"></span>
+								<span class="special-product__colors-color brown" data-color="#A7471D" data-pic="url(img/special-product/brown.jpg)"></span>
+								<span class="special-product__colors-color blue" data-color="#0377B2" data-pic="url(img/special-product/blue.jpg)"></span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- special-product end -->
+				<!-- testimonials -->
+				<div class="testimonials">
+					<div class="testimonials__main-title main-title">
+						<span>What client say ?</span>
+						Testimonials
+					</div>
+
+					<div class="testimonials__slider">
+						<div class="testimonials__slider-item">
+							<a href="#">
+								<div class="testimonials__box">
+									<div class="testimonials__image">
+										<img src="img/01.jpg" alt="">
+									</div>
+									<div class="testimonials__body">
+										<div class="testimonials__body-text">“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled . ”</div>
+										<div class="testimonials__body-name">SARA CONER</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="testimonials__slider-item">
+							<a href="#">
+								<div class="testimonials__box">
+									<div class="testimonials__image">
+										<img src="img/01.jpg" alt="">
+									</div>
+									<div class="testimonials__body">
+										<div class="testimonials__body-text">“ Lorem Ipsum is simply dummy text of  Ipsum is simply dummy text of the  Ipsum is simply dummy text of the the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled . ”</div>
+										<div class="testimonials__body-name">SARA CONER</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="testimonials__slider-item">
+							<a href="#">
+								<div class="testimonials__box">
+									<div class="testimonials__image">
+										<img src="img/01.jpg" alt="">
+									</div>
+									<div class="testimonials__body">
+										<div class="testimonials__body-text">“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled . ”</div>
+										<div class="testimonials__body-name">SARA CONER</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="testimonials__slider-item">
+							<a href="#">
+								<div class="testimonials__box">
+									<div class="testimonials__image">
+										<img src="img/01.jpg" alt="">
+									</div>
+									<div class="testimonials__body">
+										<div class="testimonials__body-text">“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled . ”</div>
+										<div class="testimonials__body-name">SARA CONER</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="testimonials__slider-item">
+							<a href="#">
+								<div class="testimonials__box">
+									<div class="testimonials__image">
+										<img src="img/01.jpg" alt="">
+									</div>
+									<div class="testimonials__body">
+										<div class="testimonials__body-text">“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled . ”</div>
+										<div class="testimonials__body-name">SARA CONER</div>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+				<!-- testimonials end -->
+				<!-- banner -->
+				<div class="banner">
+					<div class="banner__bg ibg">
+						<img src="img/information_01/01.jpg" alt="">
+					</div>
+					<div class="banner__content">
+						<div class="banner__text">
+							30% discount for all products in the initial purchase.
+							<span>Applies to new members</span>
+						</div>
+						<div class="banner__box">
+							<a class="banner__box-btn banner__box-btn--first btn" href="#">Read more</a>
+							<a class="banner__box-btn banner__box-btn--second btn" href="#">Join now</a>
+						</div>
+					</div>
+				</div>
+				<!-- banner end -->
+				<!-- news -->
+				<div class="news">
+					<div class="news__main-title main-title">
+						<span>New our blogs</span>
+						latest NEWS
+					</div>
+					<div class="news__slider">
+						<div class="news__slider-item">
+							<div class="news__item">
+								<div class="news__item-image">
+									<img src="img/01.jpg" alt="">
+									<div class="news__item-date">
+										21
+										<span>May</span>
+									</div>
+								</div>
+								<div class="news__item-body">
+									<div class="news__item-title">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></div>
+									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
+									<a class="news__item-btn btn" href="#">Read more</a>
+								</div>
+							</div>
+						</div>
+						<div class="news__slider-item">
+							<div class="news__item">
+								<div class="news__item-image">
+									<img src="img/01.jpg" alt="">
+									<div class="news__item-date">
+										21
+										<span>May</span>
+									</div>
+								</div>
+								<div class="news__item-body">
+									<div class="news__item-title">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></div>
+									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
+									<a class="news__item-btn btn" href="#">Read more</a>
+								</div>
+							</div>
+						</div>
+						<div class="news__slider-item">
+							<div class="news__item">
+								<div class="news__item-image">
+									<img src="img/01.jpg" alt="">
+									<div class="news__item-date">
+										21
+										<span>May</span>
+									</div>
+								</div>
+								<div class="news__item-body">
+									<div class="news__item-title">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></div>
+									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
+									<a class="news__item-btn btn" href="#">Read more</a>
+								</div>
+							</div>
+						</div>
+						<div class="news__slider-item">
+							<div class="news__item">
+								<div class="news__item-image">
+									<img src="img/01.jpg" alt="">
+									<div class="news__item-date">
+										21
+										<span>May</span>
+									</div>
+								</div>
+								<div class="news__item-body">
+									<div class="news__item-title">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></div>
+									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
+									<a class="news__item-btn btn" href="#">Read more</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- news end -->
 			</div>
 		</main>
 		@@include('_footer.html')
