Add images, footer with adaptive

--- a/app/_footer.html
+++ b/app/_footer.html
@@ -7,7 +7,7 @@
 					<div class="newsletter__title">Newsletter</div>
 					<form class="newsletter__form" action="#">
 						<input class="newsletter__form-input" type="text" placeholder="Enter your email here">
-						<button class="newsletter__form-button">+</button>
+						<button class="newsletter__form-button"><i class="icon-play"></i></button>
 					</form>
 				</div>
 				<div class="newsletter__column">
@@ -18,4 +18,143 @@
 		</div>
 	</div>
 	<!-- newsletter end -->
+
+	<div class="container">
+
+		<div class="footer__body">
+			<div class="footer__row">
+				<div class="footer__column footer__column--bg">
+					<div class="footer__title">WHAT WE ARE ABOUT</div>
+					<div class="footer__descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</div>
+					<ul class="footer__links">
+						<li>Follow us on:</li>
+						<li><a href="#"><i class="icon-facebook"></i></a></li>
+						<li><a href="#"><i class="icon-twitter"></i></a></li>
+						<li><a href="#"><i class="icon-youtube-play"></i></a></li>
+						<li><a href="#"><i class="icon-gplus"></i></a></li>
+						<li><a href="#"><i class="icon-pinterest"></i></a></li>
+						<li><a href="#"><i class="icon-instagram"></i></a></li>
+						<li><a href="#"><i class="icon-tumblr"></i></a></li>
+					</ul>
+				</div>
+				<div class="footer__column">
+					<!-- accordion -->
+					<div class="accordion">
+						<!-- accordion__item -->
+						<section class="accordion__item">
+							<div class="accordion__item-title">MORE INFO</div>
+							<div class="accordion__item-info">
+								<ul  class="footer__nav">
+									<li><a href="#">Terms & conditions</a></li>
+									<li><a href="#">Return policy</a></li>
+									<li><a href="#">Shipping info</a></li>
+									<li><a href="#">Carrers</a></li>
+									<li><a href="#">Wholesale</a></li>
+								</ul>
+							</div>
+						</section>
+						<!-- accordion__item end -->
+						<!-- accordion__item -->
+						<section class="accordion__item">
+							<div class="accordion__item-title">Company</div>
+							<div class="accordion__item-info">
+								<ul  class="footer__nav">
+									<li><a href="#">FAQs</a></li>
+									<li><a href="#">Privacy</a></li>
+									<li><a href="#">Terms</a></li>
+									<li><a href="#">Shipping</a></li>
+									<li><a href="#">Secure Shopping</a></li>
+								</ul>
+							</div>
+						</section>
+						<!-- accordion__item end -->
+						<!-- accordion__item -->
+						<section class="accordion__item">
+							<div class="accordion__item-title">About Us</div>
+							<div class="accordion__item-info">
+								<ul  class="footer__nav">
+									<li><a href="#">Our Showroom</a></li>
+									<li><a href="#">Read the Journal</a></li>
+									<li><a href="#">Press Information</a></li>
+									<li><a href="#">Events</a></li>
+									<li><a href="#">Careers</a></li>
+								</ul>
+							</div>
+						</section>
+						<!-- accordion__item end -->
+						<!-- accordion__item -->
+						<section class="accordion__item">
+							<div class="accordion__item-title">HELP</div>
+							<div class="accordion__item-info">
+								<ul  class="footer__nav">
+									<li><a href="#">Store Info</a></li>
+									<li><a href="#">Delivery</a></li>
+									<li><a href="#">Returns</a></li>
+									<li><a href="#">Furniture Care</a></li>
+									<li><a href="#">Fabric Guide</a></li>
+								</ul>
+							</div>
+						</section>
+						<!-- accordion__item end -->
+					</div>
+					<!-- accordion end -->
+				</div>
+				<div class="footer__column">
+					<div class="footer__title">MORE INFO</div>
+					<ul  class="footer__nav">
+						<li><a href="#">Terms & conditions</a></li>
+						<li><a href="#">Return policy</a></li>
+						<li><a href="#">Shipping info</a></li>
+						<li><a href="#">Carrers</a></li>
+						<li><a href="#">Wholesale</a></li>
+					</ul>
+				</div>
+				<div class="footer__column">
+					<div class="footer__title">Company</div>
+					<ul  class="footer__nav">
+						<li><a href="#">FAQs</a></li>
+						<li><a href="#">Privacy</a></li>
+						<li><a href="#">Terms</a></li>
+						<li><a href="#">Shipping</a></li>
+						<li><a href="#">Secure Shopping</a></li>
+					</ul>
+				</div>
+				<div class="footer__column">
+					<div class="footer__title">About Us</div>
+					<ul  class="footer__nav">
+						<li><a href="#">Our Showroom</a></li>
+						<li><a href="#">Read the Journal</a></li>
+						<li><a href="#">Press Information</a></li>
+						<li><a href="#">Events</a></li>
+						<li><a href="#">Careers</a></li>
+					</ul>
+				</div>
+				<div class="footer__column">
+					<div class="footer__title">HELP</div>
+					<ul  class="footer__nav">
+						<li><a href="#">Store Info</a></li>
+						<li><a href="#">Delivery</a></li>
+						<li><a href="#">Returns</a></li>
+						<li><a href="#">Furniture Care</a></li>
+						<li><a href="#">Fabric Guide</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="footer__copyright">
+			<div class="footer__copyright-row">
+				<div class="footer__copyright-text">© 2020 SnsTheme. All Rights Reserved. Developed By SnsTheme</div>
+				<ul class="footer__copyright-linkns">
+					<li><a href="#"><img src="img/footer/mastercard.png" alt=""></a></li>
+					<li><a href="#"><img src="img/footer/paypal.png" alt=""></a></li>
+					<li><a href="#"><img src="img/footer/visa.png" alt=""></a></li>
+					<li><a href="#"><img src="img/footer/discover.png" alt=""></a></li>
+					<li><a href="#"><img src="img/footer/american-express.png" alt=""></a></li>
+				</ul>
+			</div>
+		</div>
+
+	</div>
+
 </footer>
